--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,13 @@
 * {
   box-sizing: border-box;
 }
+*::-webkit-scrollbar {
+  width: 3px;
+}
+
+*::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
